# gtfs_extractor

./: .gitignore  README.md  mypy.ini  pyproject.toml
gtfs_extractor/: __init__.py  cli.py  filters.py  logging.py
gtfs_extractor/exceptions/: extractor_exceptions.py
gtfs_extractor/extractor/: bbox.py  extractor.py  gtfs.py
tests/: test_extractor.py
