[tool.poetry]
name = "gtfs-extractor"
version = "0.1.0"
description = ""
authors = ["Julian Psotta <julianpsotta@gmail.com>"]
readme = "README.md"
packages = [{ include = "gtfs_extractor" }]

[tool.poetry.dependencies]
python = ">=3.6,<4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
